--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
             <div class="row gy-5" data-aos="fade-in">
                 <div class="col-lg-6 order-2 order-lg-1 d-flex flex-column justify-content-center text-center text-lg-start">
                     <h2>FOREIGN LANGUAGE SCHOOL <span>ALEXOPOULOU</span></h2>
-                    <p>Experience since <span>1989!</span></p>
+                    <p>Experience since <span>1989!!</span></p>
                     <div class="d-flex justify-content-center justify-content-lg-start">
-                        <a href="#about" class="btn-get-started">Get to Know Us</a>
+                        <a href="#about" class="btn-get-started">Get to Know us</a>
                     </div>
                 </div>
                 <div class="col-lg-6 order-1 order-lg-2 hero-image-container">
@@ -128,7 +128,7 @@
                     <div class="col-lg-6">
                         <h3>Our Philosophy</h3>
                         <img src="./images/about.jpg" class="img-fluid rounded-4 mb-4" alt="Ξένες Γλώσσες Αλεξοπούλου">
-                        <p>Welcome to the website of the Alexopoulou Foreign Language School, located in Patras and providing high quality English Language Studies for more than 30 years.</p>
+                        <p>Welcome to the website of the Alexopoulou Foreign Language School, located in Patras, Greece and providing high quality English Language Studies for more than 30 years.</p>
                         <p>At our School, we cater to all ages and through targeted and personalized teaching, we meet the needs of all our students, whose progress we continually reward, motivating them to keep going strong, aiming for success!</p>
                     </div>
                     <div class="col-lg-6">
